--- a/report/report/report.tex
+++ b/report/report/report.tex
@@ -12,6 +12,10 @@
 \begin{document}
 \maketitle
 
+\mbox{}
+\newpage
+
+
 %============================================================================================
 \input{introduction.tex}
 
