--- a/report/report/report.tex
+++ b/report/report/report.tex
@@ -12,9 +12,10 @@
 \begin{document}
 \maketitle
 
+\thispagestyle{empty}
 \mbox{}
 \newpage
-
+\addtocounter{page}{-1}
 
 %============================================================================================
 \input{introduction.tex}
